<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="row">(第幾筆/總筆數)</string>
    <string name="id">旅遊地代號</string>
    <string name="name">地名</string>
    <string name="phoneNo">聯絡電話</string>
    <string name="address">地址</string>
    <string name="insert">新增</string>
    <string name="insert_success">資料新增成功</string>
    <string name="insert_fail">資料新增失敗</string>
    <string name="clear">清除</string>
    <string name="blank">請輸入旅遊地代號或地名</string>
    <string name="default_id">yushan</string>
    <string name="default_name">玉山國家公園管理處</string>
    <string name="default_phoneNo">049-2773121</string>
    <string name="default_address">南投縣水里鄉中山路一段300號</string>
    <string name="app_name">QueryData</string>
    <string name="placePrompt">想去哪玩？</string>
    <string name="yang">陽明山</string>
    <string name="submit">查詢</string>
    <string name="placeNotFound">找不到指定地點</string>
    <string name="inputPlaceName">請輸入旅遊地名稱</string>
	<string name="prompt">旅遊地資訊--</string>
	<string name="rowid_rowCount">(第幾筆/總筆數)</string>
	<string name="next">下一筆</string>
	<string name="back">上一筆</string>
	<string name="noData">沒有資料</string>

</resources>