<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_marginTop="5dp" >
		<TextView  
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textSize="16sp"
			android:text="@string/prompt" />
		<TextView  android:id="@+id/tvRow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textSize="16sp"
			android:text="@string/rowid_rowCount" />
	</LinearLayout>
		
	<TextView  
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="5dp"
		android:textSize="16sp"
		android:text="@string/id" />			
	<TextView android:id="@+id/tvId" 
		android:layout_width="wrap_content" 
		android:layout_height="24dp" 
		android:layout_marginLeft="5dp"
		android:textColor="#000000"
		android:background="#FFFFFF" />
	
		
	<TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="5dp"
		android:textSize="16sp"
		android:text="@string/name" />
	<TextView android:id="@+id/tvName" 
		android:layout_width="wrap_content" 
		android:layout_height="24dp" 
		android:layout_marginLeft="5dp"
		android:textColor="#000000"
		android:background="#FFFFFF" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="5dp"
		android:textSize="16sp"
		android:text="@string/phoneNo" />
	<TextView android:id="@+id/tvPhoneNo" 
		android:layout_width="wrap_content" 
		android:layout_height="24dp" 
		android:layout_marginLeft="5dp"
		android:textColor="#000000"
		android:background="#FFFFFF" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:layout_marginTop="5dp"
		android:textSize="16sp"
		android:text="@string/address" />
	<TextView android:id="@+id/tvAddress" 
		android:layout_width="wrap_content" 
		android:layout_height="24dp" 
		android:layout_marginLeft="5dp"
		android:textColor="#000000"
		android:background="#FFFFFF" />
			
	<LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_marginTop="5dp" >
		<Button android:id="@+id/btnNext" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/next" />
		<Button android:id="@+id/btnBack" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/back" />	
	</LinearLayout>
</LinearLayout>
